{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 50,
  "lineage": "853bcee6-dcff-b9ab-4bf7-9fbc74868786",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03264e01b340fb5da",
            "association_id": "eipassoc-0dff0c196efbedb33",
            "domain": "vpc",
            "id": "eipalloc-03264e01b340fb5da",
            "instance": "i-0875152ee01a3f58e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-07568e8a400b33cd7",
            "private_dns": "ip-10-0-10-168.us-west-2.compute.internal",
            "private_ip": "10.0.10.168",
            "public_dns": "ec2-35-83-195-134.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.195.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_server",
            "aws_key_pair.app_server",
            "aws_security_group.app_server",
            "aws_subnet.app_server",
            "aws_vpc.app_server",
            "data.aws_ami.app_server-ami",
            "tls_private_key.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a8da36869cfec4d",
            "arn": "arn:aws:ec2:us-west-2:575652729555:instance/i-0875152ee01a3f58e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0875152ee01a3f58e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07568e8a400b33cd7",
            "private_dns": "ip-10-0-10-168.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.168",
            "public_dns": "ec2-35-83-195-134.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.195.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002c5d5bce00416c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060746cacce0ace73",
            "tags": {
              "Name": "app_server"
            },
            "tags_all": {
              "Name": "app_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb964bf8760ea15e"
            ]
          },
          "dependencies": [
            "aws_key_pair.app_server",
            "aws_security_group.app_server",
            "aws_subnet.app_server",
            "aws_vpc.app_server",
            "data.aws_ami.app_server-ami",
            "tls_private_key.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:575652729555:internet-gateway/igw-04c2d71c4b45f20cd",
            "id": "igw-04c2d71c4b45f20cd",
            "owner_id": "575652729555",
            "tags": {
              "Name": "app_server-internet-gateway"
            },
            "tags_all": {
              "Name": "app_server-internet-gateway"
            },
            "vpc_id": "vpc-001200c49f0dc1b29"
          },
          "dependencies": [
            "aws_vpc.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:575652729555:route-table/rtb-0791072ef47b4a813",
            "id": "rtb-0791072ef47b4a813",
            "owner_id": "575652729555",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c2d71c4b45f20cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001200c49f0dc1b29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_server",
            "aws_vpc.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2f3838c1bc1c619",
            "route_table_id": "rtb-0791072ef47b4a813",
            "subnet_id": "subnet-060746cacce0ace73"
          },
          "dependencies": [
            "aws_internet_gateway.app_server",
            "aws_route_table.app_server",
            "aws_subnet.app_server",
            "aws_vpc.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:575652729555:security-group/sg-0eb964bf8760ea15e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb964bf8760ea15e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "575652729555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group"
            },
            "tags_all": {
              "Name": "my-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-001200c49f0dc1b29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:575652729555:subnet/subnet-060746cacce0ace73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060746cacce0ace73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575652729555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_server-subnet"
            },
            "tags_all": {
              "Name": "app_server-subnet"
            },
            "vpc_id": "vpc-001200c49f0dc1b29"
          },
          "dependencies": [
            "aws_vpc.app_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:575652729555:vpc/vpc-001200c49f0dc1b29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028d16255eca464a4",
            "default_route_table_id": "rtb-0c5f81666b997b09a",
            "default_security_group_id": "sg-01d709d9aa425a752",
            "dhcp_options_id": "dopt-049dbd86538f62c5b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001200c49f0dc1b29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5f81666b997b09a",
            "owner_id": "575652729555",
            "tags": {
              "Name": "app_server-vpc"
            },
            "tags_all": {
              "Name": "app_server-vpc"
            }
          }
        }
      ]
    }
  ]
}